<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_tm_background"
    tools:context=".SecondFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="145dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteY="150dp">

        <RelativeLayout
            android:id="@+id/iv_relative_layout"
            android:layout_width="@dimen/toolbar_profile_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/toolbar_profile_width"
                android:layout_height="@dimen/toolbar_profile_width"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_marginBottom="@dimen/activity_padding"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_account_circle_black_48"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp" />


        </RelativeLayout>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="start"
            android:hint="@string/name"
            android:singleLine="true"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="top"
            android:hint="@string/author" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="top"
            android:hint="@string/desc" />

        <TextView
            android:id="@+id/tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="top"
            android:hint="@string/lang" />

        <TextView
            android:id="@+id/tv_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="top"
            android:hint="@string/star" />

        <TextView
            android:id="@+id/tv_forks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="top"
            android:hint="@string/forks" />

        <TextView
            android:id="@+id/tv_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:gravity="top"
            android:hint="@string/default_branch" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#B8B894" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
